kubernetes/catalog/changedetection-io/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/A75G/docker-templates/master/templates/changedetection.io.xml
# Category: Tools-Utilities
# Stars: 96 | Downloads: 10238250
apiVersion: apps/v1
kind: Deployment
metadata:
  name: changedetection-io
  namespace: changedetection-io
  labels:
    app.kubernetes.io/name: changedetection-io
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: changedetection-io
  template:
    metadata:
      labels:
        app.kubernetes.io/name: changedetection-io
    spec:
      containers:
        - name: changedetection-io
          image: dgtlmoon/changedetection.io
          ports:
            - containerPort: 5000
              protocol: TCP
              name: port
          readinessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 30
            failureThreshold: 10
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 30
            failureThreshold: 10
          volumeMounts:
            - name: changedetection-io-data-0
              mountPath: "/datastore"
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: changedetection-io-data-0
        persistentVolumeClaim:
          claimName: changedetection-io-data-0
---
apiVersion: v1
kind: Service
metadata:
  name: changedetection-io
  namespace: changedetection-io
  labels:
    app.kubernetes.io/name: changedetection-io
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: changedetection-io
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: port
  type: ClusterIP
