kubernetes/catalog/changedetection-io/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: changedetection-io
  namespace: changedetection-io
  labels:
    app.kubernetes.io/name: changedetection-io
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`changedetection-io.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: changedetection-io
          port: 5000
  tls: {}
